[gd_scene load_steps=3 format=3 uid="uid://c2dk6avnflv7a"]

[ext_resource type="Script" path="res://Assets/Scripts/Utility/Menu/Option_Controller.gd" id="1_dm6as"]
[ext_resource type="Texture2D" uid="uid://buwlgdmnffabb" path="res://Assets/Sprites/Fish/SalmonFish_Sprite.png" id="2_xntvg"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Keybinds" type="Button" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 88.0
offset_right = 213.0
offset_bottom = 134.0
text = "Key Bindings"
script = ExtResource("1_dm6as")

[node name="Keybind_Popup" type="Popup" parent="Keybinds"]
title = "Keybinds"
position = Vector2i(350, 100)
size = Vector2i(500, 500)
visible = true
borderless = false

[node name="Audio" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 144.0
offset_right = 212.0
offset_bottom = 190.0
text = "Audio"
script = ExtResource("1_dm6as")

[node name="Audio_Popup" type="Popup" parent="Audio"]
title = "Audio"
position = Vector2i(350, 100)
size = Vector2i(500, 500)
borderless = false

[node name="Video" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 200.0
offset_right = 212.0
offset_bottom = 246.0
text = "Video"
script = ExtResource("1_dm6as")

[node name="Video_Popup" type="Popup" parent="Video"]
title = "Video"
position = Vector2i(350, 100)
size = Vector2i(500, 500)
borderless = false

[node name="Display" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 256.0
offset_right = 212.0
offset_bottom = 302.0
text = "Display"
script = ExtResource("1_dm6as")

[node name="Display_Popup" type="Popup" parent="Display"]
title = "Display"
position = Vector2i(350, 100)
size = Vector2i(500, 500)
borderless = false

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 456.0
offset_right = 212.0
offset_bottom = 502.0
text = "Back"
script = ExtResource("1_dm6as")

[node name="SalmonFishSprite" type="Sprite2D" parent="."]
position = Vector2(576, 328)
scale = Vector2(17.125, 15.125)
texture = ExtResource("2_xntvg")

[connection signal="pressed" from="Keybinds" to="Keybinds" method="_on_keybind_button_pressed"]
[connection signal="popup_hide" from="Keybinds/Keybind_Popup" to="Keybinds" method="_on_keybind_popup_popup_hide"]
[connection signal="pressed" from="Audio" to="Audio" method="_on_audio_button_pressed"]
[connection signal="pressed" from="Audio" to="Audio" method="_on_pressed"]
[connection signal="popup_hide" from="Audio/Audio_Popup" to="Keybinds" method="_on_keybind_popup_popup_hide"]
[connection signal="pressed" from="Video" to="Video" method="_on_video_button_pressed"]
[connection signal="popup_hide" from="Video/Video_Popup" to="Keybinds" method="_on_keybind_popup_popup_hide"]
[connection signal="pressed" from="Display" to="Display" method="_on_display_button_pressed"]
[connection signal="popup_hide" from="Display/Display_Popup" to="Keybinds" method="_on_keybind_popup_popup_hide"]
[connection signal="pressed" from="Back" to="Back" method="_on_back_button_pressed"]
